[package]
name = "distill"
version = "0.1.0"
authors = ["Andrea Giacobino <no.andrea@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sled = "0.31.0"
sled-extensions = "0.2.0"
rocket = "0.4.4"
blake3 = "0.3.0"
clap = "2.33.0"
dotenv = "0.15.0"
env_logger = "0.7.1"
flexi_logger = "0.15.2"
futures = "0.3.4"
hex = "0.4.2"
itertools = "0.9.0"
log = "0.4.8"
log4rs = "0.11.0"
rocket_contrib = "0.4.4"
rocket_cors = "0.5.2"
backtrace = "0.3.46"
serde_json = "1.0.50"
regex = "1.3.6"
